# ScalableVectorSearchBenchmarking

./: .licenserc.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: scorecard.yml  skywalking-eyes.yml
src/svsbench/: __init__.py  build.py  build_hnswlib.py  compress.py  concurrent.py  consts.py  generate_ground_truth.py  generate_leanvec_matrices.py  loader.py  merge.py  mixed.py  search.py  search_hnswlib.py  utils.py
tests/: conftest.py  test_build.py  test_compress.py  test_generate_ground_truth.py  test_generate_leanvec_matrices.py  test_loader.py  test_search.py  test_utils.py
