[project]
name = "svsbench"
description = "Benchmarking for Scalable Vector Search"
readme = "README.md"
authors = [
    { name = "Mihai Capotă", email = "mihai.capota@intel.com" }
]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.10",
    "scalable-vs>=0.0.7",
    "tqdm>=4.67",
    "typer-slim>=0.15.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 79
